Machine learning prerequisites notebook

--- a/ML_prerequisites.ipynb
+++ b/ML_prerequisites.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMN55nGTSC6qMcyHeTz0KUn",
+      "authorship_tag": "ABX9TyMEuCLb2NAH2m6YLSE3iWP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/DragonSonBlaze/CN-assignment-2/blob/main/ML_prerequisites.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Manav Parmar\n",
+        "21110120"
+      ],
+      "metadata": {
+        "id": "wsc1S0kA1frL"
+      }
     },
     {
       "cell_type": "markdown",
